WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206797
REGRESSION (
r250009
): testair crashes in (anonymous namespace)::matchAll
https://bugs.webkit.org/show_bug.cgi?id=206797
Summary
REGRESSION (r250009): testair crashes in (anonymous namespace)::matchAll
David Kilzer (:ddkilzer)
Reported
2020-01-25 04:42:53 PST
testair crashes in (anonymous namespace)::matchAll when compiled with Address Sanitizer. This regressed with the following change: Elide unnecessary moves in Air O0 <
https://bugs.webkit.org/show_bug.cgi?id=201703
> <
https://trac.webkit.org/changeset/250009
>
Attachments
Patch v1
(1.54 KB, patch)
2020-01-25 04:49 PST
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2020-01-25 04:43:12 PST
<
rdar://problem/58893221
>
David Kilzer (:ddkilzer)
Comment 2
2020-01-25 04:49:24 PST
Created
attachment 388768
[details]
Patch v1
Yusuke Suzuki
Comment 3
2020-01-27 13:12:57 PST
Comment on
attachment 388768
[details]
Patch v1 r=me
WebKit Commit Bot
Comment 4
2020-01-27 13:46:40 PST
Comment on
attachment 388768
[details]
Patch v1 Clearing flags on attachment: 388768 Committed
r255171
: <
https://trac.webkit.org/changeset/255171
>
WebKit Commit Bot
Comment 5
2020-01-27 13:46:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug