REGRESSION (r250009): testair crashes in (anonymous namespace)::matchAll <https://webkit.org/b/206797> <rdar://problem/58893221>

Reviewed by Yusuke Suzuki.

* b3/air/testair.cpp:
((anonymous namespace)::matchAll): Don't replace `str` in the
body of the for loop since `match` references it.


Canonical link: https://commits.webkit.org/219835@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255171 268f45cc-cd09-0410-ab3c-d52691b4dbfc